tests/int/snapshots/integration__int__error_cases__should_fail_with_nonexistent_path.snap
---
source: tests/int/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - /nonexistent/path
    - use
    - lib
---
success: false
exit_code: 1
----- stdout -----
[31mERROR[39m Provided path '/nonexistent/path' does not exist

----- stderr -----
