tests/int/snapshots/integration__int__error_cases__should_fail_with_unknown_subcommand.snap
---
source: tests/int/error_cases.rs
info:
  program: crawk
  args:
    - unknown
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unrecognized subcommand 'unknown'

Usage: crawk [OPTIONS] <COMMAND>

For more information, try '--help'.
