tests/int/snapshots/integration__int__error_cases__should_fail_with_workspace_root.snap
---
source: tests/int/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/workspace
    - use
    - lib-a
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: workspace support is not yet implemented
